[package]
name = "dark-server"
version = "1.0.0"
edition = "2021"
authors = ["Dark Server Contributors"]
description = "A high-performance HTTP-to-WebSocket proxy server written in Rust"
license = "MIT"
repository = "https://github.com/stevessr/dark-server"
homepage = "https://github.com/stevessr/dark-server"
documentation = "https://docs.rs/dark-server"
readme = "README.md"
keywords = ["proxy", "websocket", "http", "server", "async"]
categories = ["network-programming", "web-programming", "asynchronous"]
exclude = [
    "target/*",
    "old/*",
    "former/*",
    "ssav/*",
    "custom/*",
    "build/*",
    "node_modules/*",
    "*.js",
    "*.py",
    "*.cpp",
    "*.bat"
]

[[bin]]
name = "dark-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
dashmap = "5.0"
bytes = "1.0"
rand = "0.8"
clap = { version = "4.5.40", features = ["derive"] }
